	  latter case is now handled elsewhere. (DLR)
  input_tab()
	- Make columns an int instead of a size_t, since it's limited by
	  COLS. (DLR)
- global.c:
  shortcut_init()
	- Simplify wording of nano_gotoline_msg. (Jordi and Ken Tyler)
- move.c:
  do_first_line(), do_last_line()
	- Simplify by only using edit_redraw(), and also make them call
	  check_statusblank(). (DLR)
  do_page_up(), do_page_down()
	- If there's less than a page of text onscreen, just call
	  do_(first|last)_line(). (DLR)
- nano.c:
  usage()
	- Properly mention the support for "[+LINE,COLUMN]" on the
	  command line when HAVE_GETOPT_LONG isn't defined. (DLR)
  do_verbatim_input()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  do_next_word()
	- Rework to be more like do_prev_word(), to avoid a potential
	  problem if we start at the end of a line. (DLR)
  do_output()
	- When adding a character, just add its length in bytes to
	  current_x instead of calling do_right(), and set placewewant
	  afterward. (DLR)
  do_alt_speller()
	- If we can't invoke the spell checker, use sprintf() instead of
	  snprintf() to write the error string we return, as the one
	  formatted value is a simple string, and so altspell_error will
	  always be long enough to hold it.  Also remove unnecessary
	  initialization of altspell_error, refactor so that msglen is
	  no longer needed, and make the error message more similar to
	  what the internal spell checker returns under the same
	  circumstances. (DLR)
  do_spell()
	- When displaying an error message from do_(int|alt)_speller(),
	  don't display the error message corresponding to errno if
	  errno is zero. (David Benbennick)
  do_justify()
	- If constant cursor position display is on, make sure the
	  cursor position is displayed properly when we finish. (DLR)
  allow_pending_sigwinch()
	- Simplify by using the "?" operator instead of an if clause.
	  (DLR)
  main()